--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,8 +22,9 @@ h1 {
     margin-bottom: 30px;
     color: #4aaaa5;
     font-size: 30px;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     border-bottom: 3px solid #dddddd;
+    line-height: 1;
 }
 
 
@@ -94,6 +95,7 @@ div.name {
     position: fixed;
     bottom: 0;
     left: 0;
+    z-index: 100;
 }
 
 /* ========== ABOUT ME ========== */
@@ -133,3 +135,47 @@ div.name {
     font-weight: normal;
     background-color: #4aaaa5;
 }
+
+/* ========== CONTACT ========== */
+.contact-form {
+
+}
+
+.contact-item {
+    margin-bottom: 20px;
+}
+
+.contact-form label,
+.contact-form input {
+    display: block;
+}
+
+.contact-form label {
+    margin-bottom: 5px;
+}
+
+.input-text {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #cccccc;
+}
+
+.contact-form textarea {
+    width: 100%;
+    height: 100px;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #cccccc;
+}
+
+.submit-btn {
+    color: #ffffff;
+    background-color: #4aaaa5;
+    padding: 10px 30px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+
+
