--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,11 @@ div.name {
 .navigation a {
     color: #777777;
     text-decoration: none;
+    transition: color .3s;
+}
+
+.navigation a:hover {
+    color: #e1821d;
 }
 
 
@@ -119,6 +124,15 @@ div.name {
     position: relative;
 }
 
+.portfolio-link {
+    opacity: 1;
+    transition: opacity .3s;
+}
+
+.portfolio-link:hover {
+    opacity: .7;
+}
+
 .portfolio-list li:not(:last-of-type) {
     margin-bottom: 30px;
 }
@@ -134,6 +148,11 @@ div.name {
     color: #ffffff;
     font-weight: normal;
     background-color: #4aaaa5;
+    transition: background-color .3s;
+}
+
+.portfolio-link:hover .portfolio-title {
+    background-color: #e1821d;
 }
 
 /* ========== CONTACT ========== */
@@ -175,6 +194,11 @@ div.name {
     padding: 10px 30px;
     font-size: 16px;
     cursor: pointer;
+    transition: background-color .3s;
+}
+
+.submit-btn:hover {
+    background-color: #e1821d;
 }
 
 
