--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,6 +101,8 @@ div.name {
     bottom: 0;
     left: 0;
     z-index: 100;
+    -webkit-box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.4);
+    box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.4);
 }
 
 /* ========== ABOUT ME ========== */
