use float instead of flexbox for about contents so the paragraph will surround the image if the paragraph gets longer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,11 +107,13 @@ div.name {
 
 /* ========== ABOUT ME ========== */
 .about-contents {
-    display: flex;
+    clear: both;
+    overflow: auto;
 }
 
 .my-photo {
-    margin-right: 20px;
+    margin: 0 20px 10px 0;
+    float: left;
 }
 
 /* ========== PORTFOLIO ========== */
