--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     line-height: 1.6;
     background: url("../images/leaves-pattern.png") repeat;
-    color: #777777;
+    color: #777;
     position: relative;
 }
 
@@ -23,7 +23,7 @@ h1 {
     color: #4aaaa5;
     font-size: 30px;
     padding-bottom: 20px;
-    border-bottom: 3px solid #dddddd;
+    border-bottom: 3px solid #ddd;
     line-height: 1;
 }
 
@@ -32,7 +32,7 @@ h1 {
 .header {
     width: 100%;
     background-color: #ffffff;
-    border-bottom: 2px solid #cccccc;
+    border-bottom: 2px solid #ccc;
 }
 
 .header-contents {
@@ -68,7 +68,7 @@ div.name {
 }
 
 .navigation a {
-    color: #777777;
+    color: #777;
     text-decoration: none;
     transition: color .3s;
 }
@@ -83,8 +83,8 @@ div.name {
     width: 960px;
     margin: 30px auto 100px;
     padding: 30px;
-    background-color: #ffffff;
-    border: 1px solid #dddddd;
+    background-color: #fff;
+    border: 1px solid #ddd;
 }
 
 
@@ -92,10 +92,10 @@ div.name {
 .footer {
     width: 100%;
     padding: 30px 10px 10px;
-    background-color: #666666;
+    background-color: #666;
     border-top: 8px solid #4aaaa5;
     text-align: center;
-    color: #ffffff;
+    color: #fff;
     font-size: 12px;
     position: fixed;
     bottom: 0;
@@ -181,7 +181,7 @@ div.name {
     width: 100%;
     padding: 10px;
     font-size: 16px;
-    border: 1px solid #cccccc;
+    border: 1px solid #ccc;
 }
 
 .contact-form textarea {
@@ -189,7 +189,7 @@ div.name {
     height: 100px;
     padding: 10px;
     font-size: 16px;
-    border: 1px solid #cccccc;
+    border: 1px solid #ccc;
 }
 
 .submit-btn {
