use css variables and delete unnecessary css code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,20 @@
+/* ========== VARIABLES ========== */
+:root {
+    --color-teal: #4aaaa5;
+    --color-orange: #e1821d;
+    --color-white: #fff;
+    --color-light-gray1: #dedede;
+    --color-light-gray2: #ddd;
+    --color-light-gray3: #ccc;
+    --color-dark-gray1: #777;
+    --color-dark-gray2: #666;
+
+    --font-heading: 'Georgia', Times, Times New Roman, serif;
+    --font-default: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+
+/* ========== COMMON ========== */
 *{
     margin: 0;
     padding: 0;
@@ -5,25 +22,25 @@
 }
 
 body {
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-family: var(--font-default);
     line-height: 1.6;
     background: url("../images/leaves-pattern.png") repeat;
-    color: #777;
+    color: var(--color-dark-gray1);
     position: relative;
 }
 
 h1,
 h2,
 h3 {
-    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-family: var(--font-heading);
 }
 
 h1 {
     margin-bottom: 30px;
-    color: #4aaaa5;
+    color: var(--color-teal);
     font-size: 30px;
     padding-bottom: 20px;
-    border-bottom: 3px solid #ddd;
+    border-bottom: 3px solid var(--color-light-gray2);
     line-height: 1;
 }
 
@@ -31,13 +48,12 @@ h1 {
 /* ========== HEADER ========== */
 .header {
     width: 100%;
-    background-color: #fff;
-    border-bottom: 2px solid #ccc;
+    background-color: var(--color-white);
+    border-bottom: 2px solid var(--color-light-gray3);
 }
 
 .header-contents {
     width: 960px;
-    /*height: 50px;*/
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -46,9 +62,9 @@ h1 {
 
 div.name {
     padding: 15px 40px;
-    color: #fff;
-    background-color: #4aaaa5;
-    font-family: 'Georgia', Times, Times New Roman, serif;
+    color: var(--color-white);
+    background-color: var(--color-teal);
+    font-family: var(--font-heading);
     font-size: 36px;
     font-weight: bold;
 }
@@ -64,17 +80,17 @@ div.name {
 
 .navigation li:not(:last-of-type) {
     padding-right: 15px;
-    border-right: 1px solid #dedede;
+    border-right: 1px solid var(--color-light-gray1);
 }
 
 .navigation a {
-    color: #777;
+    color: var(--color-dark-gray1);
     text-decoration: none;
     transition: color .3s;
 }
 
 .navigation a:hover {
-    color: #e1821d;
+    color: var(--color-orange);
 }
 
 
@@ -83,8 +99,8 @@ div.name {
     width: 960px;
     margin: 30px auto 100px;
     padding: 30px;
-    background-color: #fff;
-    border: 1px solid #ddd;
+    background-color: var(--color-white);
+    border: 1px solid var(--color-light-gray2);
 }
 
 
@@ -92,17 +108,17 @@ div.name {
 .footer {
     width: 100%;
     padding: 30px 10px 10px;
-    background-color: #666;
-    border-top: 8px solid #4aaaa5;
+    background-color: var(--color-dark-gray2);
+    border-top: 8px solid var(--color-teal);
     text-align: center;
-    color: #fff;
+    color: var(--color-white);
     font-size: 12px;
     position: fixed;
     bottom: 0;
     left: 0;
     z-index: 100;
-    -webkit-box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.4);
-    box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.4);
+    -webkit-box-shadow: 0 0 10px 3px rgba(0,0,0,0.4);
+    box-shadow: 0 0 10px 3px rgba(0,0,0,0.4);
 }
 
 /* ========== ABOUT ME ========== */
@@ -149,21 +165,17 @@ div.name {
     left: 0;
     text-align: center;
     font-size: 24px;
-    color: #fff;
+    color: var(--color-white);
     font-weight: normal;
-    background-color: #4aaaa5;
+    background-color: var(--color-teal);
     transition: background-color .3s;
 }
 
 .portfolio-link:hover .portfolio-title {
-    background-color: #e1821d;
+    background-color: var(--color-orange);
 }
 
 /* ========== CONTACT ========== */
-.contact-form {
-
-}
-
 .contact-item {
     margin-bottom: 20px;
 }
@@ -181,7 +193,7 @@ div.name {
     width: 100%;
     padding: 10px;
     font-size: 16px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--color-light-gray3);
 }
 
 .contact-form textarea {
@@ -189,12 +201,12 @@ div.name {
     height: 100px;
     padding: 10px;
     font-size: 16px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--color-light-gray3);
 }
 
 .submit-btn {
-    color: #fff;
-    background-color: #4aaaa5;
+    color: var(--color-white);
+    background-color: var(--color-teal);
     padding: 10px 30px;
     font-size: 16px;
     cursor: pointer;
@@ -202,8 +214,5 @@ div.name {
 }
 
 .submit-btn:hover {
-    background-color: #e1821d;
+    background-color: var(--color-orange);
 }
-
-
-
